--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
 	<body>
 		<h1 id="tytuł">Hello, world!</h1>
+		
+		<p><a href="lodziarnia.html">Projekt 1 - lodziarnia</a></p>
 
 		<p>Kółko programowania 2021/2022 😀😀😀</p>
 
