--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 		<h1 id="tytuł">Hello, world!</h1>
 		
 		<p><a href="lodziarnia.html">Projekt 1 - lodziarnia</a></p>
+		<p><a href="pi.html">Projekt 2 - obliczanie π</a></p>
+		<p><a href="animacja.html">Projekt 3 - animacja</a></p>
 
 		<p>Kółko programowania 2021/2022 😀😀😀</p>
 
