--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 		<p><a href="lodziarnia.html">Projekt 1 - lodziarnia</a></p>
 		<p><a href="pi.html">Projekt 2 - obliczanie π</a></p>
 		<p><a href="animacja.html">Projekt 3 - animacja</a></p>
+		<p><a href="Gra.html">Projekt 4 - gra</a></p>
+		<p><a href="Pong.html">Projekt 4* - gra zmodyfikowana</a></p>
 
 		<p>Kółko programowania 2021/2022 😀😀😀</p>
 
